# ML_Playground

./: pyproject.toml
demos/: demo1-iris_classification_demo.ipynb  demo2-least_square.py  demo3-gradient_descent.py  demo4-kmeans.ipynb  demo5_spectral_clustering.ipynb  demo6_LDA.ipynb  demo7_bp.ipynb
src/: graph_problem.py  k_means.py  spectral_clustering.py
